<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            >
        </EditText>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" 
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/genreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_genre"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textAutoComplete" >
        </EditText>

        <EditText
            android:id="@+id/dateSeenEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_date_seen"
            android:imeOptions="actionNext"
            android:inputType="date" >
        </EditText>

        <EditText
            android:id="@+id/tag1EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_tag1"
            android:imeOptions="actionNext"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/tag2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_tag2"
            android:imeOptions="actionDone"
            android:inputType="text" >
        </EditText>

        <Button
            android:id="@+id/saveRatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/save_rating_button"
            android:textSize="30sp" >
        </Button>
    </LinearLayout>

</ScrollView>